fixed link wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
   left: 0;
   background-color: black;
   transform-origin: bottom right;
-  transition: transform 0.7s ease-out;
+  transition: transform 0.5s ease-out;
 }
 
 .hover-underline-animation:hover:after {
